{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 178,
  "lineage": "c653eb12-b31e-2a92-12bc-3ea67d9f2c9e",
  "resources": [
    {
      "module": "module.dev-aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_traffic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:348730744300:security-group/sg-0f9fa0c01fabd6cae",
            "description": "security grp for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9fa0c01fabd6cae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_traffic_sg",
            "name_prefix": "",
            "owner_id": "348730744300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-traffic-sg"
            },
            "tags_all": {
              "Name": "web-traffic-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b149a5ccc9f0e354"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-route-table-association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0176beeee71bfea3d",
            "route_table_id": "rtb-0fcc6a4c4855ae6cd",
            "subnet_id": "subnet-006580ad367612ddf"
          },
          "dependencies": [
            "module.eu-west-1-route-table.aws_route_table.eu-west-1-rt",
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.subnet.aws_subnet.eu-west-1-web",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-1-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu-west-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:348730744300:route-table/rtb-0fcc6a4c4855ae6cd",
            "id": "rtb-0fcc6a4c4855ae6cd",
            "owner_id": "348730744300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067941c2bf484a64c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eu-west-1-rt-1"
            },
            "tags_all": {
              "Name": "eu-west-1-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b149a5ccc9f0e354"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:348730744300:internet-gateway/igw-067941c2bf484a64c",
            "id": "igw-067941c2bf484a64c",
            "owner_id": "348730744300",
            "tags": {
              "Name": "eu-west-1-igw"
            },
            "tags_all": {
              "Name": "eu-west-1-igw"
            },
            "vpc_id": "vpc-0b149a5ccc9f0e354"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu-west-1-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:348730744300:subnet/subnet-006580ad367612ddf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006580ad367612ddf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348730744300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_vpc",
              "Project": "example"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_vpc",
              "Project": "example"
            },
            "vpc_id": "vpc-0b149a5ccc9f0e354"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:348730744300:vpc/vpc-0b149a5ccc9f0e354",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2fc4ab6dfc242d8",
            "default_route_table_id": "rtb-0fa1596ecbb84802a",
            "default_security_group_id": "sg-0c724084b0aa9341e",
            "dhcp_options_id": "dopt-b00f04d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b149a5ccc9f0e354",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa1596ecbb84802a",
            "owner_id": "348730744300",
            "tags": {
              "Environment": "dev",
              "Name": "dev_vpc",
              "Project": "example"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_vpc",
              "Project": "example"
            }
          }
        }
      ]
    }
  ]
}